--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.14",
+    "sweetalert2": "^11.15.10",
     "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
